--- a/src/main/resources/templates/customer/edit.html
+++ b/src/main/resources/templates/customer/edit.html
@@ -134,6 +134,9 @@
             "columns": [
               {
                 "data": "id",
+                "render": function (data, type, row, meta) {
+                    return '<a href="/quote/edit/' + row.id + '">' + data + '</a>';
+                }
               },
               {
                 "data": "description",
